--- a/broadcastreceivers/src/main/AndroidManifest.xml
+++ b/broadcastreceivers/src/main/AndroidManifest.xml
@@ -15,6 +15,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <receiver
+            android:name="com.codekul.broadcastreceivers.MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.AIRPLANE_MODE"/>
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
+
+
+
