--- a/sqlite/src/main/AndroidManifest.xml
+++ b/sqlite/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".DbProvider"
+            android:authorities="com.codekul.db.provider"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
